@@ -1,5 +1,13 @@
 # vim: set noexpandtab:
 
+2012-07-20 Matt
+	* Added ET_me to DiLepEvtType
+	* Updated method to retrieve DiLepEvtType
+	* Updated DilTrigLogic package -- major changes
+	       * Call passDilTrig() to see if event and trigger matching pass
+	       * Call passDilEvtTrig() to see if event trigger pass
+	       * Call passDilTrigMatch() to see if leptons match to the right trigger
+	
 2012-07-19 Steve
 	* Tagging SusyNtuple-00-00-15
 
